# polaris-quant

./: .gitignore  README.md  project-stucture.md
trading-system/backend/: pyproject.toml  requirements.txt
trading-system/backend/src/: pipeline_test.py
trading-system/backend/src/api/: main.py
trading-system/backend/src/api/routes/: backtest.py  backtest_results.py  backtest_walkforward.py  clean.py  data.py  data_latest_hash.py  data_quality.py  features.py  features_data.py  ingest.py  models.py  models_train.py  raw.py  table.py
trading-system/backend/src/backtesting/: backtest_results.py  backtest_results_schema.sql  backtesting_engine.py  backtesting_engine_mode.py  backtesting_test_notebook.py  sample_predictions_schema.sql  walkforward_engine.py
trading-system/backend/src/features/: feature_engineering.py  tidy_feature_engineering.py
trading-system/backend/src/ingestion/: yahoo_ingest.py
trading-system/backend/src/models/: model_leaderboard.py  train_xgboost.py  train_xgboost_tidy.py
trading-system/backend/src/utils/: data_hash.py  duckdb_helpers.py  json_safe.py  metrics.py  pandas_helpers.py
trading-system/backend/src/validation/: run_validation.py  validate_data.py
trading-system/frontend/: package-lock.json  package.json  vite.config.ts
trading-system/frontend/public/: tickers.json
trading-system/frontend/src/: App.tsx
trading-system/frontend/src/components/: TickerAutocomplete.tsx  TickerName.tsx
trading-system/frontend/src/hooks/: useTickerMeta.ts
trading-system/frontend/src/pages/: Backtesting.tsx  Dashboard.tsx  DataQuality.tsx  (+4 more)
(+15 files in other folders)
